2006-02-02  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Module.h:
	removed duplicate declaration

2006-01-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.c (main):
	replaced previous patch with a better one

	* fvwm/virtual.c (unmap_window):
	* fvwm/menus.c (do_menu):
	* fvwm/events.c (fake_map_unmap_notify):
	(HandleMapNotify):
	* fvwm/add_window.c (MappedNotOverride):
	Added XFlush after XSelectInput

2006-01-28  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* fvwm/fvwm.c (main):
	fix for fvwm not detecting non ICCCM2 wm (bug #3151)

2006-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.17
	released 2.5.16

	* NEWS:
	* configure.ac:
	updated for 2.5.16 release

	* acinclude.m4 (CHECK_LIBCHARSET):
	removed debug code

2006-01-19  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/functions.c (execute_complex_function):
	print a message to the console instead of ringing the bell when a
	grab fails

2006-01-14  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	fixed typo (NEWS still said 2.5.15)

2006-01-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.16
	released 2.5.15

	* NEWS:
	* configure.ac:
	updated for 2.5.15 release

2006-01-13  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (GetOnePositionArgument):
	(GetMoveArguments):
	new option "screen" to Move type commands

2006-01-08  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* acinclude.m4 (smr_SWITCH):
	updated

2006-01-08  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am
	restore requirement of automake-1.4; 1.8 is too new even for my system

2006-01-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* configure.in:
	* configure.ac:
	renamed configure.in to configure.ac

	* acinclude.m4:
	some updates for new autoconf/automake versions

	* configure.in:
	* acconfig.h:
	removed acconfig.h

	* configure.in: