@@ -2,6 +2,9 @@ To find out what should go in this file, see "Information For
 Maintainers of GNU Software" (maintain.texi), the section called
 "Recording Changes".
 
+Renato Caldas:
+Cleaned up module initialization.
+
 Malcolm Still:
 New MenuStyle option TrianglesUseFore.
 
